Fixed an issue on firefox with gallery header

--- a/resources/css/frontpage.css
+++ b/resources/css/frontpage.css
@@ -32,6 +32,7 @@ img#gallery-cover {
 	height:300px;
 	width:100%; 
 	background-repeat-x:no-repeat;
+	display:block;
 } 
 div.category {
 	padding: 1em 0;
